@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Browser.cxx,v 1.9.2.12.2.13 2004/11/20 03:19:58 easysw Exp $"
+// "$Id$"
 //
 // Browser widget for the Fast Light Tool Kit (FLTK).
 //
@@ -534,8 +534,7 @@ void Fl_Browser::swap(FL_BLINE *a, FL_BLINE *b) {
   // Disable cache -- we played around with positions
   cacheline = 0;
   // Redraw modified lines
-  redraw_line(a);
-  redraw_line(b);
+  redraw_lines();
 }
 
 void Fl_Browser::swap(int ai, int bi) {
@@ -546,5 +545,5 @@ void Fl_Browser::swap(int ai, int bi) {
 }
 
 //
-// End of "$Id: Fl_Browser.cxx,v 1.9.2.12.2.13 2004/11/20 03:19:58 easysw Exp $".
+// End of "$Id$".
 //
