@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692)
+	- Fl_Browser::swap() didn't handle redraws properly when
+	  the swapped lines had different heights (STR #729)
 	- FL_MOUSEWHEEL events are now sent first to the widget
 	  under the mouse pointer and then to the first widget
 	  which accepts them. This is similar to the way
